[project]
name = "carthage_aws"
authors = [
    { name = "Sam Hartman", email = "sam.hartman@hadronindustries.com" },
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"
version = "0.20"
description = "AWS Plugin for Carthage IAC Framework"
dependencies = [
  "boto3",
]

[project.optional-dependencies]
dev = [
  "carthage @ git+https://github.com/Hadron/carthage.git@master",
  "pylint",
  "black",
  "pytest",
]

[tool.setuptools.packages.find]
include = ["carthage_aws*"]

[tool.pylint]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
# priorities are rated 1 (highest) to 5 (lowest)
disable = [
    "C0114",  # missing-module-docstring: 5
    "C0115",  # missing-class-docstring: 1
    "R0903",  # too-few-public-methods: 5
    "C0116",  # missing-function-docstring: 1
    "C0103",  # invalid-name: 1
    "W0401",  # wildcard-import: 3
    "R0902",  # too-many-instance-attributes: 5
    "C0121",  # singleton-comparison: 3
    "W0614",  # unused-wildcard-import: 3
    "W0223",  # abstract-method: 2
    "E1101",  # no-member: 2
    "E0203",  # access-member-before-definition: 2
    "W0108",  # unnecessary-lambda: 4
    "W0718",  # late-binding-lambda: 3
    "E0202",  # method-hidden: 2
    "C0415",  # import-outside-toplevel: 4
    "E0102",  # function-redefined: 4
    "C0413",  # wrong-import-position: 3
    "R0401",  # cyclic-import: 3
    "E0602",  # undefined-variable: 2
    "E0401",  # import-error: 4
    "E0611",  # no-name-in-module: 4
]

[tool.pylint.DESIGN]
max-branches = 15
max-parents = 10

[tool.black]
line-length = 120
target-version = ['py311']
